Fix offer detail description spacing

--- a/src/pages/Applicant/OfferDetail/Detail/styles.module.scss
+++ b/src/pages/Applicant/OfferDetail/Detail/styles.module.scss
@@ -49,6 +49,10 @@
   }
 }
 
+.description {
+  white-space: pre-wrap;
+}
+
 @media (max-width: $mobileContainerThreshold) {
   .mainContainer {
     @include card;
